--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: "About"
-description: "Hey, this is Sheldor."
+description: "Hey, this is my life."
 header-img: "img/post-bg-rwd.jpg"
 ---
 
@@ -17,9 +17,9 @@ header-img: "img/post-bg-rwd.jpg"
     <!--copied from markdown -->
     <blockquote><p>千里之行 始于足下</p></blockquote>
 
-    <p>Hey，我是<strong>渠淼(BY)</strong>，一只前端程序猿，现在上海讨生活。</p>
+    <p>Hey，我是<strong>渠淼(Sheldor)</strong>，一只前端程序猿，现在上海讨生活。</p>
 
-    <p>博客将记录我与生活相爱相杀的点点滴滴，愿早日成为一名稳重、从容、谦虚、友善的人。</p>
+    <p>博客将记录我与生活相依为命的点点滴滴，愿早日成为一名温和、从容、成熟、谦逊的人。</p>
 
     <p>这是我的利用 <a href="https://pages.github.com/">GitHub Pages</a> 与 <a href="http://jekyll.com.cn/">Jekyll</a> 搭建的 个人博客。我在GitHub主页<a href="https://github.com/sheldormhh">👉GitHub·BY</a> 。如果有什么问题，欢迎提出探讨~</p>
 
