--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "一壶浊酒喜相逢 古今多少事 都付笑谈中"
+description: "I'll Try Anything Once"
 ---
 
 {% for post in paginator.posts %}
